# ml-pipeline-starter

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/ml_pipeline/: __init__.py  __main__.py  artifact.py  data.py  features.py  model.py  split.py
src/ml_pipeline/datasets/: lending_club_sample.csv
