[project]
# Distribution name is namespaced (the bare "ml-pipeline" is taken on PyPI); the
# import name stays `ml_pipeline`. Install with `pip install dutchengineer-ml-pipeline`.
name = "dutchengineer-ml-pipeline"
version = "1.1.0"
description = "A small, real ML package: load, build features, train, score a loan-default model. The Module 1 example from the DutchEngineer track."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "DutchEngineer" }]
keywords = ["machine-learning", "packaging", "example", "dutchengineer"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas",
    "scikit-learn",
]

[project.urls]
Homepage = "https://learn.dutchengineer.org"
Repository = "https://github.com/adutchengineer/ml-pipeline-starter"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
